--- a/abc.html
+++ b/abc.html
@@ -18,14 +18,14 @@
     <h2>VSCode</h2>
     <ol>
       <li>
-        名称: Settings Sync
-        ID: shan.code-settings-sync
-        说明: Synchronize Settings, Snippets, Themes, File Icons, Launch, Keybindings, Workspaces and Extensions Across Multiple Machines Using GitHub Gist.
-        版本: 3.4.3
-        发布者: Shan Khan
-        VS Marketplace 链接: https://marketplace.visualstudio.com/items?itemName=Shan.code-settings-sync
+        名称: Settings Sync<br>
+        ID: shan.code-settings-sync<br>
+        说明: Synchronize Settings, Snippets, Themes, File Icons, Launch, Keybindings, Workspaces and Extensions Across Multiple Machines Using GitHub Gist.<br>
+        版本: 3.4.3<br>
+        发布者: Shan Khan<br>
+        VS Marketplace 链接: https://marketplace.visualstudio.com/items?itemName=Shan.code-settings-sync<br>
       </li>
-    <ol>
+    </ol>
     <h2>Chrome</h2>
   </section>
 </div>
